<resources>
    <string name="app_name">3 Tabs</string>
    <string name="tab_text_1">Address</string>
    <string name="tab_text_2">Gallery</string>
    <string name="tab_text_3">\Game</string>
    <string name="enter_name">Name</string>
    <string name="enter_addr">Address</string>
    <string name="add_address_text">Add</string>
    <string name="default_name">name1</string>
    <string name="default_address">address1</string>
    <string name="random">yee</string>
    <string name="start_button_text">Start!</string>
    <string name="board_description">backround image for game</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
