<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_addr">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/addAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_address_text"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/addressView"
        android:layout_width="match_parent"
        android:layout_height="630dp">

        <LinearLayout
            android:id="@+id/addr_elem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/address_block_height"
                android:layout_weight="0.4"
                android:text="@string/default_name"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/address_block_height"
                android:layout_weight="0.4"
                android:text="@string/default_address"></TextView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/address_block_height"
                android:layout_weight="0.2"
                android:text="@string/random" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>